Se realizaron algunos ajustes del tamaño de las fuentes y espaciado entre contenedoresz, además que se termino la versión de escritorio

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My projects</title>
     <link rel="stylesheet" href="./styles/phone.css">
+    <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@300;500;700&display=swap">
 </head>
 <body>
@@ -34,7 +35,7 @@
     </main>
     <footer>
         <div class="footer-contact-container">
-            <p><span class="linkedin"></span><a href="www.linkedin.com/in/jose-hernandez-wd">Linkedin</a></p>
+            <p><span class="linkedin"></span><a href="www.linkedin.com/in/jose-hernandez-wd" target="_blank">Linkedin</a></p>
             <p><span class="whatsapp"></span>(+52) 55-5053-3845</p>
             <p><span class="mail"></span>Jose_Hernandez_C@outlook.com</p>
         </div>
