--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Aquí encontrarás todos mis proyectos personales, me llamo José Hernández y soy desarrollador web. ¡Bienvenidos!">
     <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My projects</title>
+    <title>Mis proyectos</title>
     <link rel="stylesheet" href="./styles/phone.css">
     <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@300;500;700&display=swap">
