--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <ul>
                 <li><a href="https://josehercast.github.io/Batatabit_2020/" target="_blank">BatataBit 2020</a>: Un sitio web para la compra de criptomonedas.</li>
                 <li><a href="https://josehercast.github.io/ZGYM/"  target="_blank">ZGYM</a>: Prototipo de 'mobile page' para un gimnasio con temática de Dragon Ball Z.</li>
-                <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google_Clone</a>: Clon del buscador de Google para escritorio.</li>
+                <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google Clone</a>: Clon del buscador de Google para escritorio.</li>
+                <li><a href="https://josehercast.github.io/TS-email-page/"  target="_blank">TS e-mail page</a>: "E-mail page" para el equipo de Taquito Software</li>
             </ul>
         </section>
     </main>
