--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
             <p class="profile-roll">Web developer</p>
         </div>
         <section class="main-about-container">
-            <p>Soy estudiante de la Facultad de Ingeniería de la UNAM, en la carrera de Ingeniería en Computación. Apasionado de la tecnología, la animación y el desarrollo de software.<br><br>Actualmente me especializo en el Desarrollo Web Integral; 'Backend', 'Frontend', 'Mobile First', 'Responsive Design', 'Modern Workflow', etc.
+            <p>I am a student at the Faculty of Engineering at UNAM, in the Computer Engineering career. Passionate about technology, animation and software development.<br><br>Currently I specialize in Integral Web Development; 'Backend', 'Frontend', 'Mobile First', 'Responsive Design', 'Modern Workflow', etc.
             </p>
         </section>
         <section class="main-projects-container">
             <h2>Mis proyectos</h2>
             <ul>
-                <li><a href="https://josehercast.github.io/Batatabit_2020/" target="_blank">BatataBit 2020</a>: Un sitio web para la compra de criptomonedas.</li>
-                <li><a href="https://josehercast.github.io/ZGYM/"  target="_blank">ZGYM</a>: Prototipo de 'mobile page' para un gimnasio con temática de Dragon Ball Z.</li>
-                <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google Clone</a>: Clon del buscador de Google para escritorio.</li>
-                <li><a href="https://josehercast.github.io/TS-email-page/"  target="_blank">TS e-mail page</a>: "E-mail page" para el equipo de Taquito Software</li>
+                <li><a href="https://josehercast.github.io/Batatabit_2020/" target="_blank">BatataBit 2020</a>: A Web Site for crypto-currency exchange.</li>
+                <li><a href="https://josehercast.github.io/ZGYM/"  target="_blank">ZGYM</a>: A prototype of mobile page for gym with "Dragon Ball" thematic.</li>
+                <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google Clone</a>: Clon of Google Search for desktop</li>
+                <li><a href="https://josehercast.github.io/TS-email-page/"  target="_blank">TS e-mail page</a>: "E-mail page" for Taquito Software team.</li>
             </ul>
         </section>
     </main>
