Añadida la página de la digitalización de credenciales para PILOMEX

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="https://josehercast.github.io/ZGYM/"  target="_blank">ZGYM</a>: A prototype of mobile page for gym with "Dragon Ball" thematic.</li>
                 <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google Clone</a>: Clon of Google Search for desktop</li>
                 <li><a href="https://josehercast.github.io/TS-email-page/"  target="_blank">TS e-mail page</a>: "E-mail page" for Taquito Software team.</li>
-                <li><a href="https://josehercast.github.io/PILOMEX/"  target="_blank">TS e-mail page</a>:Digital Badge for PILOMEX enterprise</li>
+                <li><a href="https://josehercast.github.io/PILOMEX/"  target="_blank">PILOMEX Badge</a>: Digital Badge for PILOMEX enterprise</li>
             </ul>
         </section>
     </main>
