Añadidos mis proyectos sobre desarrollor en 3D

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Aquí encontrarás todos mis proyectos personales, me llamo José Hernández y soy desarrollador web. ¡Bienvenidos!">
+    <meta name="description" content="Here you will find all my personal projects, my name is José Hernández and I am a developer. Welcome!">
     <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis proyectos</title>
+    <title>Home</title>
     <link rel="stylesheet" href="./styles/phone.css">
     <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 768px)">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@300;500;700&display=swap">
@@ -18,20 +18,25 @@
         <div class="main-profile-container">
             <span class="profile-picture"></span>
             <p class="profile-name">José Hernández</p>
-            <p class="profile-roll">Web developer</p>
+            <p class="profile-roll">Developer and software specialist</p>
         </div>
         <section class="main-about-container">
-            <p>I am a student at the Faculty of Engineering at UNAM, in the Computer Engineering career. Passionate about technology, animation and software development.<br><br>Currently I specialize in Integral Web Development; 'Backend', 'Frontend', 'Mobile First', 'Responsive Design', 'Modern Workflow', etc.
+            <p>I am a student at the Faculty of Engineering of the UNAM, in the career of Computer Engineering. I am passionate about everything related to software development, from mobile applications and web development, to design of multimedia interfaces and virtual reality, 3D environments and video games, having experience and representative projects in each of the mentioned fields.
+                <br><br>
+                I love coffee '<'3
             </p>
         </section>
         <section class="main-projects-container">
-            <h2>Mis proyectos</h2>
+            <h2>My projects</h2>
             <ul>
-                <li><a href="https://josehercast.github.io/Batatabit_2020/" target="_blank">BatataBit 2020</a>: A Web Site for crypto-currency exchange.</li>
-                <li><a href="https://josehercast.github.io/ZGYM/"  target="_blank">ZGYM</a>: A prototype of mobile page for gym with "Dragon Ball" thematic.</li>
-                <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google Clone</a>: Clon of Google Search for desktop</li>
+                <li><a href="https://josehercast.github.io/Batatabit_2020/" target="_blank">BatataBit 2020</a>: A simple Land Page for crypto-currency exchange.</li>
+                <li><a href="https://josehercast.github.io/ZGYM/"  target="_blank">ZGYM</a>: Land page concept for gym with "Dragon Ball" thematic.</li>
+                <li><a href="https://josehercast.github.io/Google_Clone/"  target="_blank">Google Clone</a>: Clon of Google Search</li>
                 <li><a href="https://josehercast.github.io/TS-email-page/"  target="_blank">TS e-mail page</a>: "E-mail page" for Taquito Software team.</li>
-                <li><a href="https://josehercast.github.io/PILOMEX/"  target="_blank">PILOMEX Badge</a>: Digital Badge for PILOMEX enterprise</li>
+                <li><a href="https://josehercast.github.io/PILOMEX/"  target="_blank">PILOMEX Badge</a>: Digital Badge for PILOMEX team</li>
+                <li><a href="https://youtu.be/dYvAP_mVY5Q"  target="_blank">Spaceshooter</a>: Third-person shooter prototype game</li>
+                <li><a href="https://youtu.be/oPfCBhYT5PI"  target="_blank">Last-Try</a>: First-person shooter prototype game</li>
+                <li><a href="https://youtu.be/oDap4EOvl5s"  target="_blank">Patitas a casa</a>: Mobile app concept to rescue doggies</li>
             </ul>
         </section>
     </main>
