Añadidos mis proyectos sobre desarrollor en 3D

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="es" xmlns="http://www.w3.org/1999/xhtml"
-xmlns:fb="http://ogp.me/ns/fb#">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta property="og:image" content="https://josehercast.github.io/assets/imgs/profile_medium.jpg" />
+    <meta name="linkedin:image" content="https://josehercast.github.io/assets/imgs/profile_medium.jpg" />
     <meta name="description" content="Here you will find all my personal projects, my name is José Hernández and I am a developer. Welcome!">
     <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
