--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta property="og:image" content="https://josehercast.github.io/assets/imgs/profile_medium.jpg" />
-    <meta name="linkedin:image" content="https://josehercast.github.io/assets/imgs/profile_medium.jpg" />
+    <meta property="og:image" content="https://josehercast.github.io/assets/imgs/header_medium.jpg" />
+    <meta name="linkedin:image" content="https://josehercast.github.io/assets/imgs/header_medium.jpg" />
+    <meta name="facebook:image" content="https://josehercast.github.io/assets/imgs/header_medium.jpg" />
+    <meta name="twitter:image" content="https://josehercast.github.io/assets/imgs/header_medium.jpg" />
+    <meta name="instagram:image" content="https://josehercast.github.io/assets/imgs/header_medium.jpg" />
     <meta name="description" content="Here you will find all my personal projects, my name is José Hernández and I am a developer. Welcome!">
     <meta name="robots" content="index,follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
