Modificado el enlace a linkedin

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
     <footer>
         <div class="footer-contact-container">
-            <p><span class="linkedin"></span><a href="www.linkedin.com/in/jose-hernandez-wd" target="_blank">Linkedin</a></p>
+            <p><span class="linkedin"></span><a href="https://www.linkedin.com/in/jose-hernandez-wd" target="_blank">Linkedin</a></p>
             <p><span class="whatsapp"></span>(+52) 55-5053-3845</p>
             <p><span class="mail"></span>Jose_Hernandez_C@outlook.com</p>
         </div>
